Fix aspect ratio on firefox

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ body {
   border-radius: 50%;
   scale: 1.2;
   aspect-ratio: 1/1;
+  width: 30dvh;
 }
 .recipe-card > img:hover {
   box-shadow: none;
